--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,400&display=swap');
+
 :root{
-    --fuenteHeading: 'PT Sans', sans-serif;
-    --fuenteParrafos: 'Open Sans', sans-serif;
+    --fuenteHeading: 'Roboto', sans-serif;
+    --fuenteParrafos:'Roboto', sans-serif;
 
     --darkGrey: #161a1d;
+    --blanco: #ffffff;
 }
-
+   
 html{
     box-sizing: border-box;
     font-size: 62,5%;
@@ -13,7 +16,7 @@ html{
 }
 
 body{
-    font-family: var(--fuenteParrafos);
+    font-family: 'Roboto', sans-serif;
     font-size: 1.6rem;
     line-height: 2;
 }
@@ -26,12 +29,13 @@ body{
 
 h1,h2,h3,h4{
     font-family: var(--fuenteHeading);
+    font-weight: 400;
     color: var(--darkGrey);
     margin: 0%;
 }
 
 h4{
-    font-size: 1.3rem;
+    font-size: 2rem;
 }
 
 a{
@@ -43,7 +47,7 @@ a{
 
 p{
     font-family: var(--fuenteParrafos);
-    font-weight: bold;
+    font-weight: 300;
     font-size: 1rem;
     text-decoration: none;
     color: #161a1d;
@@ -57,6 +61,10 @@ h4 span{
 
 li span{
     font-size: 1.2rem ;
+}
+
+img{
+    max-width: 100%;
 }
 
 /*HEADER*/
@@ -238,7 +246,48 @@ width: 100%;
     .despedida p{
         padding: 2rem;
     }
+
+    .portada_review{
+        height: 30rem;
+        background-image: url(media/galaxy-s10-plus-review-feat-edit2.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        display: flex;
+        align-items: center;
+    }
+    
+    .portada_texto{
+        margin-left: 2rem;
+    }
+    
+    .span_portada{
+        font-size: 1.9rem;
+    }
 }
+
+.portada_review{
+    height: 30rem;
+    background-image: url(media/galaxy-s10-plus-review-feat-edit2.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
+.portada_texto{
+    margin-left: 2rem;
+    line-height: 3rem;
+}
+
+.span_portada{
+    font-size: 1.9rem;
+}
+
+
+
+
 
 
 
